--- a/src/route/index.html
+++ b/src/route/index.html
@@ -6,5 +6,89 @@
     <title>Document</title>
     <link href="../output.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body
+    class="flex justify-evenly flex-col relative items-center min-h-screen transition-all duration-300 bg-[#0E0E0E] bg-center bg-no-repeat bg-cover"
+  >
+    <h1 class="text-white text-9xl font-mono">T H E W I R E D</h1>
+    <div
+      id="js-overlay"
+      class="absolute inset-0 bg-cover bg-center opacity-0 transition-opacity duration-500 z-[-1]"
+    ></div>
+
+    <div class="flex flex-row justify-evenly w-full mx-24 image">
+      <!-- Profile 1 -->
+      <div class="relative">
+        <div
+          class="js-mini-profile cursor-pointer hover:scale-105 transition-all duration-300 w-32 h-32 rounded-full border-[#B5B8A6] border-[2px] overflow-hidden"
+        >
+          <img
+            src="../../assets/image/profile-image-one.jpg"
+            class="h-full w-full object-cover"
+          />
+        </div>
+
+        <h1
+          class="js-username text-2xl font-mono text-white absolute bottom-[-40px] left-5 opacity-0 transition-opacity duration-200 z-[-1]"
+        >
+          PRESENT
+        </h1>
+      </div>
+      <!-- Profile 2 -->
+
+      <div class="relative">
+        <div
+          class="js-mini-profile cursor-pointer hover:scale-105 transition-all duration-300 w-32 h-32 rounded-full border-[#B5B8A6] border-[2px] overflow-hidden"
+        >
+          <img
+            src="../../assets/image/profile-image-two.jpg"
+            class="h-full w-full object-cover"
+          />
+        </div>
+
+        <h1
+          class="js-username text-2xl font-mono text-white absolute bottom-[-40px] left-10 opacity-0 transition-opacity duration-200 z-[-1]"
+        >
+          DAY
+        </h1>
+      </div>
+      <!-- Profile 3 -->
+
+      <div class="relative">
+        <div
+          class="js-mini-profile cursor-pointer hover:scale-105 transition-all duration-300 w-32 h-32 rounded-full border-[#B5B8A6] border-[2px] overflow-hidden"
+        >
+          <img
+            src="../../assets/image/profile-image-three.jpg"
+            class="h-full w-full object-cover"
+          />
+        </div>
+
+        <h1
+          class="js-username text-2xl font-mono text-white absolute bottom-[-40px] left-5 opacity-0 transition-opacity duration-200 z-[-1]"
+        >
+          PRESENT
+        </h1>
+      </div>
+      <!-- Profile 4 -->
+
+      <div class="relative">
+        <div
+          class="js-mini-profile cursor-pointer hover:scale-105 transition-all duration-300 w-32 h-32 rounded-full border-[#B5B8A6] border-[2px] overflow-hidden"
+        >
+          <img
+            src="../../assets/image/profile-image-four.jpg"
+            class="h-full w-full object-cover"
+          />
+        </div>
+
+        <h1
+          class="js-username text-2xl font-mono text-white absolute bottom-[-40px] left-10 opacity-0 transition-opacity duration-200 z-[-1]"
+        >
+          TIME
+        </h1>
+      </div>
+    </div>
+
+    <script src="../script/sample.js"></script>
+  </body>
 </html>
